# slalom

./: .gitmodules  README.md  requirements.txt
App/: Makefile  Makefile_cu  cuda_fmod.cc  cuda_fmod.cu.cc  relu_slalom.cc  relumaxpool_slalom.cc
SGXDNN/: .gitignore  Crypto.cpp  Crypto.h  Makefile  aes-simde.h  aes-stream.cpp  benchmark.hpp  interface.h  optee-stub.cpp  sgxdnn_main.cpp  sgxdnn_main.hpp  utils.hpp
SGXDNN/layers/: conv2d.hpp  dense.hpp  depthwise_conv2d.hpp  eigen_spatial_convolutions.h
TA/: .gitignore  CMakeLists.txt  Makefile
TA.old/host/: optee_bridge.c
TA.old/ta/: Makefile  dtoa.c  libutils_ext.c  sgxdnn_wrap.c  user_ta_header_defines.h
TA/enclave/: CMakeLists.txt  Enclave.h  Makefile  enc.cpp
TA/host/: CMakeLists.txt  Makefile  sgxdnn_optee_bridge.cpp
TA/ta/: sub.mk
TA/ta/include/: sgxdnn_wrap.h
python/slalom/: keras_fix.py  sgxdnn.py
python/slalom/scripts/: eval.py  eval_slalom.py
